--- a/index.html
+++ b/index.html
@@ -146,32 +146,32 @@ hr {
     Vous pouvez cliquer sur chaque projet pour avoir plus de détails.
   </p>
 <p>
-<!--   <hr>
+ <hr>
   <select name="" id="">
     <option value="">Select a project for details..</option>
     <option value="1">Réduction de la séparation horizontale 10NM > 7NM dans la FIR Casablanca</option>
-    <option value="2">Implémentation du concept FUA dans la FIR Casablanca</option>
-    <option value="3">Implémentation du concept FRA dans la CTA Casablanca </option>
-    <option value="">Project #4</option>
-    <option value="">Project #5</option>
-    <option value="">Project #6</option>
-    <option value="">Project #7</option>
-    <option value="">Project #8</option>
-    <option value="">Project #9</option>
-    <option value="">Project #10</option>
-    <option value="">Project #11</option>
-    <option value="">Project #12</option>
-    <option value="">Project #13</option>
-    <option value="">Project #14</option>
-    <option value="">Project #15</option>
-    <option value="">Project #16</option>
-    <option value="">Project #17</option>
-    <option value="">Project #18</option>
-    <option value="">Project #19</option>
-    <option value="">Project #20</option>
-    <option value="">Project #21</option>
+    <option value="2">Mise en oeuvre du plan PBN Maroc</option>
+    <option value="3">Implémentation du concept FUA dans la FIR Casablanca</option>
+    <option value="4">Implémentation du concept FRA dans la CTA Agadir (24H) </option>
+    <option value="5">Centralisation du contrôle d'approche GMMN</option>
+    <option value="6">Centralisation du contrôle d'aprpoche GMAD</option>
+    <option value="7">Construction d'une tour de contrôle/Bloc technique à l'aéroprot Mohammed V</option>
+    <option value="8">Certification selon le réglement CE 373/2017</option>
+    <option value="9">Homologation CIR CCR Casablanca</option>
+    <option value="10">Mise en place d'un centre de sécurité des opérations du PNA (SoC)</option>
+    <option value="11">Renouvellement des installations radar des site Marrakech, El Oualidia, Tan-Tan & Casablanca</option>
+    <option value="12">Fourniture du système A-SMGCS aux aéroprots Mohammed V & Marrakech</option>
+    <option value="13">Fourniture du système ADS-B aux aéroports Essaouira, Nador, Rabat</option>
+    <option value="14">Renforcement de la couverture VHF dans la FIR Casablanca</option>
+    <option value="15">Mise en place de la veille réglementaire</option>
+    <option value="16">eTOD à l'échelle national</option>
+    <option value="17">GMAO</option>
+    <option value="18">Actualisation de l'accord cadre ONDA/FRA - volet navigation aérienne</option>
+    <option value="19">Remote Towers</option>
+    <option value="20"></option>
+    <option value="21"></option>
   </select>
-</p> -->
+</p> 
   <hr>
 </div>
 <div class="projects">
